--- a/css/type.css
+++ b/css/type.css
@@ -9,13 +9,29 @@
 	font-family, font-size, line-height, list-style-type, text-decoration,
 */
 
+ /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+	#wrapper > header > h1 {
+		font-size: 20px;
+	}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+	#wrapper > header > h1 {
+	font-size: 40px;
+	}
+}
+
 body {
 /*font-family: 'Heebo', sans-serif;*/
 font-family: 'Sriracha', cursive;
+font-size: 16px;
 }
 p {
 line-height: 1.6;
-font-size: 16px;
 }
 h1 > a {
 text-decoration: none;
