--- a/css/layout.css
+++ b/css/layout.css
@@ -3,53 +3,23 @@
 
 	Written for softstuff.uk,
 	this css file is used to define rules of composition and dynamic layout.
-	Rules set before the @media queries are to be used across all devices,
-	rules which change depending on screen width are defined inside the @media queries.
+	Rules set before the @media queries are to be used across all screen sizes,
+	rules which change depending on screen size are defined inside the @media queries.
 
 	Properties:
-	border, display, height, grid-template-rows, list-style-position, margin, max-width, outline, padding, position, right, top, width
+	border, display, height, grid-template-rows, list-style-position, margin, max-width,
+	outline, padding, position, right, top, width
 */
 
- /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+/* Always used */
 
-	#wrapper {
-	width: 100%;
-	grid-template-rows: 40px auto 40px;
-	}
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-	#wrapper {
-	grid-template-rows: 80px auto 80px;
-	width: 76%;
-	margin: 0 7% 0 7%;
-	padding: 0 5% 0 5%;
-	
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {...}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {...}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {...}
-
-
-
-
-body {
+body, p {
 margin: 0;
 }
 	#wrapper {
 	position: absolute;
 	display: grid;
-	height: 100%;
+	height: 100vh;
 	}
 		#wrapper > * {
 		display: flex;
@@ -62,17 +32,42 @@ margin: 0;
 			display: grid;
 			grid-template-columns: 3fr 1fr;
 			}
-p {
-margin: 0;
-}
-img {
+
+img, a {
+display: inline-block;
 max-width: 100%;
 height: auto;
 }
 ul {
 padding-left: 20px;
 }
-a {
-display: block;
-height: 100%;
+
+ /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+	#wrapper {
+	width: 100vw;
+	grid-template-rows: 40px auto 40px;
+	}
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+	#wrapper {
+	width: 76vw;
+	grid-template-rows: 80px auto 80px;
+	margin: 0 7vw 0 7vw;
+	padding: 0 5vw 0 5vw;
+	
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {...}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {...}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {...}
