--- a/css/layout.css
+++ b/css/layout.css
@@ -13,25 +13,19 @@
 
 /* Always used */
 
-body, p {
+body, p, #wrapper > header > h1 {
 margin: 0;
 }
-	#wrapper {
-	position: absolute;
-	display: grid;
-	height: 100vh;
+#wrapper, #wrapper > main {
+display: grid;
+}
+#wrapper {
+position: absolute;
+height: 100vh;
+}
+	#wrapper > * {
+	display: flex;
 	}
-		#wrapper > * {
-		display: flex;
-		}
-			#wrapper > header > h1 {
-			margin-top: 0;
-			margin-bottom: 0;
-			}
-			#wrapper > main {
-			display: grid;
-			grid-template-columns: 3fr 1fr;
-			}
 
 img, a {
 display: inline-block;
@@ -49,6 +43,9 @@ padding-left: 20px;
 	width: 100vw;
 	grid-template-rows: 40px auto 40px;
 	}
+		#wrapper > main > #sidebar {
+		display: none;
+		}
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -59,8 +56,10 @@ padding-left: 20px;
 	grid-template-rows: 80px auto 80px;
 	margin: 0 7vw 0 7vw;
 	padding: 0 5vw 0 5vw;
-	
-
+	}
+		#wrapper > main {
+		grid-template-columns: 3fr 1fr;
+		}
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
