--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,10 @@ margin: 0;
 position: absolute;
 }
 
+#rps-container {
+display: none; /* overwritten by JS */
+}
+
  /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
