--- a/css/timefiles.css
+++ b/css/timefiles.css
@@ -12,7 +12,7 @@ text-align: center;
 		font-size: 20px;
 		}
 		#tf-month-nav {
-		padding-top: 40px;
+		padding: 10px 0 40px 0;
 		}
 
 	#tf-day {
