wrote a lot of sql (not included in repo) and started using php to include blocks of html for ease of viewing and editing.

--- a/css/color.css
+++ b/css/color.css
@@ -15,5 +15,5 @@ h1>a {
 color: inherit;
 }
 .tf-month-day, #tf-day { /* default color for no activity */
-background-color: rgba(0,90,10,.2);
+background-color: #ccdece;
 }
