tiny bit of tidying

--- a/css/type.css
+++ b/css/type.css
@@ -13,7 +13,7 @@
 
 body {
 /*font-family: 'Heebo', sans-serif;*/
-font-family: 'Sriracha', cursive;
+font-family: 'Sriracha', sans-serif;
 }
 p {
 line-height: 1.6;
