--- a/css/type.css
+++ b/css/type.css
@@ -25,6 +25,13 @@ nav > ul {
 list-style-type: none;
 }
 
+#output {
+font-size: 24px;
+color: red;
+font-family: sans-serif;
+font-weight: bold;
+}
+
  /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
