frettrain is working sorta better

--- a/css/color.css
+++ b/css/color.css
@@ -17,3 +17,12 @@ color: inherit;
 .tf-month-day, #tf-day { /* default color for no activity */
 background-color: #ccdece;
 }
+
+#output {
+color: red;
+background-color: rgba(255,255,255,.8);
+}
+
+.show-button p {
+color: black;
+}
